examples/test/testpolicy14750.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14750
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key0: value45
      key19: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value35
      podSelector:
        matchLabels:
          key17: value1
          key16: value18
          key37: value1
